plugins {
    id 'java'
}

group = "faang.school"
version = "1.0"
java.sourceCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
}

dependencies {

    implementation('com.fasterxml.jackson.core:jackson-databind:2.15.1')
    implementation("org.slf4j:slf4j-api:2.0.5")
    implementation('ch.qos.logback:logback-classic:1.4.7')
    implementation("org.projectlombok:lombok:1.18.26")

    implementation 'org.webjars.bower:RWD-Table-Patterns:5.2.5'
    annotationProcessor("org.projectlombok:lombok:1.18.26")
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'


    testImplementation("org.assertj:assertj-core:3.24.2")
}

test {
    useJUnitPlatform()
}